2008-04-18  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/gui.cpp: label inputs, outputs, effects

	* src/win32/VcamWin.cpp: fix up possible deadlock

	* src/win32/ShmemImage.h: factor out image-over-shmem
	logic.

2008-04-15  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/modules/CMakeLists.txt: explicitly list the
	ffmpeg driver in YARP - needed on Linux for video4linux or
	firewire access.

2008-04-14  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* src/gui/cmdline.cpp: begin a command-line version of
	ucanvcam, for use without a GUI.

	* configure: add dummy configure script that calls cmake.

	* src/common/Effect.h: (and many other files) made class
	names and filenames less obscure.

2008-04-12  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* CMakeLists.txt: improved NSIS packaging, version bump.

2008-04-10  Paul Fitzpatrick  <paulfitz@alum.mit.edu>

	* CMakeLists.txt: version bump, windows build actually works
	well for the first time; assumes 320x240 RGB at the moment 
	though...

	* src/win32/VcamWin.cpp: mutex for access to input device.

	* wrapper/win32/ShmemBus.h: start using shmem on windows to
	decouple image acquisition and processing from activex voodoo.
