@@ -1,9 +1,26 @@
 
+SET (STATLIB "${CMAKE_BINARY_DIR}/static_libs")
+IF (EXISTS ${STATLIB})
+    MESSAGE(STATUS "static_libs directory present: ${STATLIB}")
+    LINK_DIRECTORIES(${STATLIB})
+    ADD_DEFINITIONS(-static-libgcc)
+    SET(CMAKE_CXX_LINK_EXECUTABLE "${CMAKE_CXX_LINK_EXECUTABLE} -static-libgcc")
+    FILE(GLOB statlibs ${STATLIB}/*.a)
+    LINK_LIBRARIES(${statlibs})
+ENDIF (EXISTS ${STATLIB})
+
+
+
 FIND_PACKAGE(YARP REQUIRED)
 
 FIND_PACKAGE(SDL REQUIRED)
 INCLUDE_DIRECTORIES(${SDL_INCLUDE_DIR} ${SDL_INCLUDE_DIR}/..)
-LINK_LIBRARIES(${SDL_LIBRARY})
+IF (USE_GUI)
+  # SDL does not seem to be really needed anymore, is this true?
+  # check effectv effects
+  LINK_LIBRARIES(${SDL_LIBRARY})
+ENDIF (USE_GUI)
+
 
 IF (MINGW)
   ADD_DEFINITIONS(-DMINGW)
@@ -74,6 +91,7 @@ ENDIF (UNIX)
 
 TARGET_LINK_LIBRARIES(${TARGET_NAME} gd freetype)
 
+SET (DISABLE_SWSCALE TRUE)
 ADD_SUBDIRECTORY(modules)
 
 #SET(vcammod_DIR ${CMAKE_CURRENT_BINARY_DIR})
